# FOTA

./: .gitignore  .gitmodules  README.md
Application/: CMakeLists.txt  Commands.txt  Makefile
Application/.cache/clangd/index/: Application.c.6667B92298B041F8.idx  Application.h.A3DD91326E93BAFC.idx  EXTI_Interface.h.5BF1515713BC0E83.idx  EXTI_Program.c.F3FCAEE6FED52941.idx  GPIO_Interface.h.62A7A0A91A7BADF2.idx  GPIO_Program.c.2A319A603328EB78.idx  Macros.h.AE3D9D0D0FCE374F.idx  NVIC_Interface.h.79EEF6C440E62839.idx  NVIC_Program.c.D541360DA454EDA2.idx  RCC_Interface.h.FDBF097657DB37E5.idx  RCC_Program.c.9FE5C4491852E238.idx  STM32F103.h.3E96E0DE4ED11169.idx  Standard_Types.h.A0BBDAAAEDCBF51E.idx  System_Init.c.BDB7C9DA91213E51.idx  cmsis_gcc.h.34376E0F06C3BC59.idx  core_cm3.h.18FCFCF4222132C6.idx  core_cmFunc.h.4DF3F65157B0BD9B.idx  core_cmInstr.h.1BFF270DBFFEA618.idx  stm32f103xb.h.1FDE90FAEC058D09.idx  stm32f1xx.h.FA3BA78A92139E88.idx  system_stm32f1xx.h.22CF750078C4EF9E.idx
Application/Application/: Application.c  Application.h
Application/HAL/EEPROM/: EEPROM_Interface.h
Application/HAL/Keypad/: Keypad_Program.c
Application/HAL/LCD/: LCD_Program.c
Application/HAL/Seven_Segment/: Seven_Segment_Interface.h  Seven_Segment_Program.c
Application/Include/Application/: Application.h
Application/Include/MCAL/EXTI/: EXTI_Interface.h
Application/Include/MCAL/GPIO/: GPIO_Interface.h
Application/Include/MCAL/NVIC/: NVIC_Interface.h
Application/MCAL/EXTI/: EXTI_Interface.h  EXTI_Program.c
Application/MCAL/FLASH/: FLASH.c  FLASH.h
Application/MCAL/GPIO/: GPIO_Interface.h  GPIO_Program.c
Application/MCAL/I2C/: I2C_Interface.h
Application/MCAL/NVIC/: NVIC_Program.c
Application/MCAL/SPI/: SPI_Interface.h
Application/MCAL/USART/: USART_Program.c
Application/Source/Application/: Application.c
Application/Source/MCAL/EXTI/: EXTI_Program.c
Application/Source/MCAL/GPIO/: GPIO_Program.c
Application/Source/MCAL/RCC/: RCC_Program.c
Baremetal_Bootloader/: Library  Makefile
Baremetal_Bootloader/Application/: Baremetal_Bootloader.c  Baremetal_Bootloader.h
Baremetal_Bootloader/HAL/Keypad/: Keypad_Interface.h
Baremetal_Bootloader/HAL/LCD/: LCD_Interface.h
Baremetal_Bootloader/MCAL/CRC/: CRC.h
Baremetal_Bootloader/MCAL/FLASH/: FLASH.h
Baremetal_Bootloader/MCAL/I2C/: I2C_Program.c
Baremetal_Bootloader/MCAL/SPI/: SPI_Program.c
Host_Bootloader/: CMakeLists.txt
Host_Bootloader/Include/: Bootloader_Interface.hpp
Host_Bootloader/Source/: Bootloader.cpp  Bootloader_Interface.cpp
Target_Bootloader/: CMakeLists.txt  HAL  MCAL  Makefile
Target_Bootloader/.cache/clangd/index/: Baremetal_Bootloader.c.60351C8459194F32.idx  Baremetal_Bootloader.h.2E93CEF3C049DF65.idx  Bootloader_Interface.h.7009885AA31C66B3.idx  Bootloader_Program.c.58A8E45426EB70A9.idx  CRC.c.ECDC59202F6A2002.idx  CRC.h.1189F72336AC1D4C.idx  EXTI_Interface.h.B467EB6A13AD8E1A.idx  EXTI_Program.c.26D3F05F6788CD2C.idx  FLASH.c.DB358E325E436D0B.idx  FLASH.h.C2EA6E3C47EE0309.idx  GPIO_Interface.h.2C5ECCBAC166FBC9.idx  GPIO_Program.c.2FED889F0B62CFED.idx  Macros.h.1C325C093CFD19A0.idx  NVIC_Interface.h.1B73743DDEE45F47.idx  NVIC_Program.c.9785A2FF79AE4B7E.idx  RCC_Interface.h.731B79FD76BF74AF.idx  RCC_Program.c.D823C2C0CB01DE05.idx  STM32F103.h.8CC25819A03AA363.idx  Standard_Types.h.A21A9052CB7DCBF4.idx  System_Init.c.0348A56F76A23851.idx  USART_Interface.h.42C5D0F1C4B66F79.idx  USART_Program.c.5C9C62F543030915.idx  cmsis_gcc.h.008A4ACCA4D4111E.idx  core_cm3.h.525F13EC7739C8B7.idx  core_cmFunc.h.7DB6A4193A6C7AEE.idx  core_cmInstr.h.A9C319118D1143FD.idx  stm32f103xb.h.7CBDEC731988A777.idx  stm32f1xx.h.C9C20BA20E247B8B.idx  system_stm32f1xx.h.513918F0A1967CBA.idx
Target_Bootloader/Application/: Baremetal_Bootloader.c
Target_Bootloader/Diagrams/: Baremetal_Bootloader.puml
Target_Bootloader/HAL/EEPROM/: EEPROM_Program.c
Target_Bootloader/Include/MCAL/FLASH/: FLASH.h
Target_Bootloader/Include/MCAL/RCC/: RCC_Interface.h
Target_Bootloader/MCAL/FLASH/: FLASH.c
Target_Bootloader/MCAL/USART/: USART_Interface.h  USART_Program.c
Target_Bootloader/Source/Application/: Baremetal_Bootloader.c
Target_Bootloader/Source/MCAL/CRC/: CRC.c
Target_Bootloader/Source/MCAL/FLASH/: FLASH.c
